# SimuladorFinanceiro

./: .gitignore  404.html  BUILD.md  CONTRIBUTING.md  FASTAPI_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  README.md  SimuladorFinanceiro.spec  build.py  example.env  index.html  main.py  main_fastapi.py  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  sitemap.xml  test_fastapi_migration.py  validate_build.py
api/: buy-fixed-income-api-fixed-income-asset-uuid-buy-post.html  cancel-order-api-variable-income-asset-orders-delete.html  continue-simulation-api-simulation-continue-post.html  create-simulation-api-simulation-create-post.html  get-active-players-api-simulation-players-get.html  get-cash-api-portfolio-cash-get.html  get-economic-indicators-api-economic-indicators-get.html  get-fixed-income-api-fixed-income-get.html  get-fixed-income-details-api-fixed-income-asset-uuid-get.html  get-portfolio-api-portfolio-get.html  get-portfolio-ticker-api-portfolio-ticker-get.html  get-settings-api-settings-get.html  get-simulation-settings-api-simulation-settings-get.html  get-simulation-state-api-get-simulation-state-get.html  get-statistics-api-statistics-get.html  get-tunnel-status-api-tunnel-status-get.html  get-variable-income-api-variable-income-get.html  get-variable-income-details-api-variable-income-asset-get.html  import-assets-csv-api-import-assets-csv-post.html  import-assets-json-api-import-assets-yfinance-post.html  list-order-book-api-variable-income-asset-orders-get.html  session-init-api-session-init-post.html  (+16 more)
(+934 files in other folders)
