[project]
name = "simulador-financeiro"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-socketio>=5.16.2",
    "sqlalchemy>=2.0.50",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "B",
    "UP",
    "SIM",
    "PERF",
    "RUF",
    "TRY",
    "PTH",
    "PLC0415",
]
ignore = [
    "E501",   # line too long
    "UP047",  # pyupgrade
    "TRY003", # raise-vanilla-args
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
build = [
    "pyinstaller>=6.20.0",
]
dev = [
    "line-profiler>=5.0.2",
    "matplotlib>=3.10.9",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "radon>=6.0.1",
    "ruff>=0.15.16",
    "snakeviz>=2.2.2",
    "sqlacodegen>=4.0.3",
]
